--- a/init/index.ejs
+++ b/init/index.ejs
@@ -1,16 +1,16 @@
 <template>
   <div class="container">
     <%if(!canvas){%>
-    <dom-stage v-if="showStage" :stageObj="stageObj" tabindex="-1"></dom-stage>
-    <%}else{%>
-    <canvas-stage v-if="showStage" :stageObj="stageObj" tabindex="-1"></canvas-stage>
-    <%}%>
+      <dom-stage v-if="showStage" :stageObj="stageObj" tabindex="-1"></dom-stage>
+      <%}else{%>
+        <canvas-stage v-if="showStage" :stageObj="stageObj" tabindex="-1"></canvas-stage>
+        <%}%>
   </div>
 </template>
 <script>
-  <%if(!canvas){%>
+  <%if (!canvas) {%>
   import { domStage, domEE } from 'xes_pixi_renderer'
-  <%}else{%>
+  <%} else {%>
   import { canvasStage, canvasEE } from 'xes_canvas_renderer'
   <%}%>
   import { PixiExporter } from 'xeditor-convertor'
@@ -19,69 +19,75 @@
   import { EMIT_EVENT } from '../core/event'
   import { pageSizeFun } from '../core/preload'
 
-  <%plugins.forEach((v)=>{%>
-  <%-'require("'+v+'")'%>
-  <%})%>
+  <% plugins.forEach((v) => {%>
+  <% -'require("' + v + '")' %>
+  <%}) %>
 
-    <%pages.forEach((v,i)=>{%>
-  <%-`import { main${i} } from '../code/main${i}'`%>
-    <%})%>
+    <% pages.forEach((v, i) => {%>
+  <% -`import { main${i} } from '../code/main${i}'` %>
+    <%}) %>
 
   export default {
     name: 'Index',
     components: {
-    <%if(!canvas){%>
-    domStage
-    <%}else{%>
-    canvasStage
-    <%}%>
+    <%if(!canvas) {%>
+      domStage
+      <%}else{%>
+        canvasStage
+        <%} %>
     },
-    data () {
-      return {
-        stageObj: {},
-        showStage: false,
-        pixi:{}
-      }
-    },
-    watch:{
-      stageObjId(){
-        this.pixi.pixiApp.stage = this.stageObj;
-        <%if(!canvas){%>
-        EMIT_EVENT(domEE, this.stageObj, this.stageObj.toObj())
-        <%}else{%>
-        EMIT_EVENT(canvasEE, this.stageObj, this.stageObj.toObj())
-        <%}%>
-      }
-    },
-    computed:{
-      stageObjId(){
-        return this.stageObj.id;
-      }
-    },
-    created () {
-      let dataThis = this
-      GET_DATA_FROM_URL(() => {
-        let pixi = new PixiExporter(
-          JSON.parse(window.localStorage.getItem('main')),
-          JSON.parse(window.localStorage.getItem('resource')),
-          (current, all) => {
-            console.log('资源加载个数：' + current)
-            console.log('资源总个数：' + all)
-          },
-          () => {
-            this.pixi = pixi;
-            let stages = pixi.pixiApp.stages
-            dataThis.stageObj = pixi.pixiApp.stage
-            pageSizeFun(document, window, dataThis.stageObj.width, dataThis.stageObj.height)
-            let stageObj = dataThis.stageObj.toObj()
-            dataThis.showStage = true
-            <%pages.map((v,i)=>{%>
-            <%-`main${i}.bind(stages[${i}].toObj())(this,stages)`%>
-            <%})%>
-          }
-        )
-      })
+  data() {
+    return {
+      stageObj: {},
+      showStage: false,
+      pixi: {}
     }
+  },
+  watch: {
+    stageObjId(){
+      this.pixi.pixiApp.stage = this.stageObj;
+        <%if (!canvas) {%>
+        EMIT_EVENT(domEE, this.stageObj, this.stageObj.toObj())
+        <%} else {%>
+          EMIT_EVENT(canvasEE, this.stageObj, this.stageObj.toObj())
+          <%}%>
+      }
+  },
+  computed: {
+    stageObjId(){
+      return this.stageObj.id;
+    }
+  },
+  created() {
+    let dataThis = this
+    GET_DATA_FROM_URL(() => {
+      let pixi = new PixiExporter(
+        JSON.parse(window.localStorage.getItem('main')),
+        JSON.parse(window.localStorage.getItem('resource')),
+        (current, all) => {
+          console.log('资源加载个数：' + current)
+          console.log('资源总个数：' + all)
+        },
+        () => {
+          let body = document.getElementsByTagName('body')[0];
+          if (body.className === '') {
+            body.className = 'load-complete';
+          } else {
+            body.className += ' load-complete';
+          }
+          this.pixi = pixi;
+          let stages = pixi.pixiApp.stages
+          dataThis.stageObj = pixi.pixiApp.stage
+          pageSizeFun(document, window, dataThis.stageObj.width, dataThis.stageObj.height)
+          let stageObj = dataThis.stageObj.toObj()
+          dataThis.showStage = true
+            <% pages.map((v, i) => {%>
+            <% -`main${i}.bind(stages[${i}].toObj())(this,stages)` %>
+            <%}) %>
+          }
+      )
+    })
+  }
   }
 </script>
 
@@ -97,5 +103,4 @@
     background-position: center center;
     background-repeat: no-repeat;
   }
-
 </style>
