--- a/init/index.ejs
+++ b/init/index.ejs
@@ -19,13 +19,13 @@
   import { EMIT_EVENT } from '../core/event'
   import { pageSizeFun } from '../core/preload'
 
-  <% plugins.forEach((v) => {%>
-  <% -'require("' + v + '")' %>
+  <% plugins.forEach((v,i) => {%>
+    require('<%-v%>')
   <%}) %>
 
-    <% pages.forEach((v, i) => {%>
-  <% -`import { main${i} } from '../code/main${i}'` %>
-    <%}) %>
+  <% pages.forEach((v, i) => {%>
+  <%-`import { main${i} } from '../code/main${i}'` %>
+  <%}) %>
 
   export default {
     name: 'Index',
@@ -82,7 +82,7 @@
           let stageObj = dataThis.stageObj.toObj()
           dataThis.showStage = true
             <% pages.map((v, i) => {%>
-            <% -`main${i}.bind(stages[${i}].toObj())(this,stages)` %>
+            <%-`main${i}.bind(stages[${i}].toObj())(this,stages)` %>
             <%}) %>
           }
       )
